crates/airpulse_dsl-evaluator/tests/snapshots/golden_pipeline__g01_present_sarif.snap
---
source: crates/airpulse_dsl-evaluator/tests/golden_pipeline.rs
expression: to_sarif(&eng.snapshot())
---
{"version":"2.1.0","$schema":"https://json.schemastore.org/sarif-2.1.0.json","runs":[{"tool":{"driver":{"name":"adgl"}},"results":[{"ruleId":"l3_pmtud_blackhole","level":"error","message":{"text":"XlIcmpTcpMss detected in session scope"},"partialFingerprints":{"scope":"session","target":"session:1ea8843fc09c3a6a","causes":["PmtudBlackhole"]},"properties":{"evidence":{"segment_size":"1500"}}}]}]}
