crates/airpulse_dsl-evaluator/tests/snapshots/golden_pipeline__g04_sarif.snap
---
source: crates/airpulse_dsl-evaluator/tests/golden_pipeline.rs
expression: to_sarif(&eng.snapshot())
---
{"version":"2.1.0","$schema":"https://json.schemastore.org/sarif-2.1.0.json","runs":[{"tool":{"driver":{"name":"adgl"}},"results":[{"ruleId":"ap_port_cable_disconnected","level":"error","message":{"text":"CableDisconnected detected in port scope"},"partialFingerprints":{"scope":"port","target":"port:c9a473bad77f640e","causes":["PhysicalCableDamage"]},"properties":{"evidence":{"count":"1"}}}]}]}
