crates/airpulse_dsl-evaluator/tests/snapshots/golden_pipeline__g06_snapshot.snap
---
source: crates/airpulse_dsl-evaluator/tests/golden_pipeline.rs
expression: snap
---
Snapshot {
    causes: [
        CauseView {
            scope: ScopeId {
                scope_type: Session,
                key: 16279356027259440662,
            },
            kind: CauseKind(
                "TransientL2Disruption",
            ),
            target: ScopeId {
                scope_type: Session,
                key: 16279356027259440662,
            },
            time: EventTime(
                30000,
            ),
            confidence: Confidence(
                80,
            ),
        },
    ],
    problems: [
        ProblemView {
            scope: ScopeId {
                scope_type: Session,
                key: 16279356027259440662,
            },
            kind: ProblemKind(
                "AmbiguousDiagnosis",
            ),
            target: ScopeId {
                scope_type: Session,
                key: 16279356027259440662,
            },
            time: EventTime(
                30000,
            ),
            severity: Medium,
            sarif_id: SarifId(
                "ap_ambiguous",
            ),
            cause_kinds: [
                CauseKind(
                    "TransientL2Disruption",
                ),
            ],
            evidence_fields: {
                "segment_size": "1500",
                "vlan": "-1201702728932031700",
            },
            superseded: false,
        },
    ],
    audit: [],
}
